# jump_to_fastapi

./: .gitignore  README.md  data.py  database.py  main.py  models.py  pyproject.toml
domain/answer/: answer_crud.py  answer_router.py  answer_schema.py
domain/question/: question_crud.py  question_router.py  question_schema.py
domain/user/: user_crud.py  user_router.py  user_schema.py
src/configuration/: __init__.py
src/db/: __init__.py  database.py  entity.py
src/db/repository/: __init__.py  answer_repo.py  question_repo.py  user_repo.py
src/domain/: router.py
src/domain/answer/: answer_controller.py  answer_model.py  answer_service.py
src/domain/question/: question_controller.py  question_model.py  question_service.py
src/domain/user/: user_controller.py  user_model.py  user_service.py
